# MeshCurvature

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/Math/: Mrgb.h
include/PolyMesh/: PolyMeshIterators.h
src/: IOManger.cpp
viewer/: objloader.js  viewer.html
